<resources>
    <string name="app_name">Kieslog</string>
    <string name="versionBackend">a-m-</string>

    <!-- Strings related to login -->
    <string name="txt_welcome">Welcome to \nkieslog.</string>
    <string name="txt_welcome2">Let\'s work together \nto improve our kids\' \ndental hygiene.</string>
    <string name="btn_signin">Sign in as an existing user</string>
    <string name="btn_register">Register as a new user</string>
    <string name="noInternet">No internet</string>

    <string name="txt_login">Sign in</string>
    <string name="txt_email">EMAIL ADDRESS</string>
    <string name="txt_password">PASSWORD</string>
    <string name="chk_rememberme">Remember Me</string>
    <string name="txt_forgotPassword">Forgot Password?</string>
    <string name="btn_done">Done</string>
    <string name="str_noEmail">Please enter an email</string>
    <string name="str_noPass">Please enter a password</string>
    <string name="str_noValid">Please enter a valid email and password</string>
    <string name="str_error">Sorry, an error occurred. Please reopen the app.</string>

    <string name="txt_register">Register</string>
    <string name="txt_access_code">ACCESS CODE</string>
    <string name="txt_repassword">RE-ENTER PASSWORD</string>
    <string name="txt_terms">By registering I agree to Kieslog\'s \nTerms of Service and Privacy Policy.</string>
    <string name="str_fillAllFields">Please fill all fields</string>

    <string name="txt_header">Forgot password?</string>
    <string name="txt_text1">We\'ll send you a link to create \na new password.</string>

    <string name="txt_title1">Don\'t have \nan access code?</string>
    <string name="txt_title2">Contact your dentist \nto receive an access code. \nKieslog is a tool \nthat helps you collaborate \nwith your dentist and \nsupports your effort to \nimprove your kids\' daily \nroutines.</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="date_tv">Date:</string>
    <string name="time_tv">Time:</string>
    <string name="quantity_tv">Quan:</string>
    <string name="measurement_tv">gr/ml</string>
    <string name="button_save">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_login">Sign In</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_ok">OK</string>
    <string name="checkbox_remember">Remember Me</string>
    <string name="username">User Email</string>
    <string name="password">Password</string>
    <string name="settings_header">Settings</string>
    <string name="settings_title">General</string>
    <string name="settings_title_changePassword">Change password</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="add_new_product_tv">Add new product</string>
    <string name="recent_title">Recent Products</string>
    <string name="main_title">Daily log</string>
    <string name="name_title">Product name</string>
    <string name="name_hint">Product name</string>
    <string name="unit_title">Portion unit</string>
    <string name="search_prod_title">Search products</string>
    <string name="unit_hint">Portion unit</string>
    <string name="who">Who</string>
    <string name="settings_email">Email</string>
    <string name="terms_title">Terms of Service and Privacy Policy</string>
    <string name="about_title">About</string>
    <string name="delete_title">Delete item</string>
    <string name="time_title">When</string>
    <string name="quantity_title">Quantity</string>
    <string name="new_prod_tv">New Product Name</string>
    <string name="sugar_per_100_tv">Sugar Per 100 gr/ml</string>
    <string name="last_entry_tv">last entry at </string>
    <string name="delete_dialog_title">Are you sure you want to delete\nthis item? The portion and time\nof consume will be deleted from\nthe daily log of your child.</string>
    <string name="sing_out_dialog_title">Are you sure\nyou want to sign out?</string>
    <string name="prod_to_child_dialog_title">Fill Quantity and Time field\nand check at least one child\nin order to Save the product</string>
    <string name="about_dialog_header">Information about this app.\nLorem ipsum dolor sit amet,\ncosectetur adipiscing elit.\nQuisque nunc est, luctus eget\nneque et, rutrum elementum dui.</string>
    <string name="new_prod_dialog_title">Fill the product name and\nsugar per 100 gr/ml in order\nto Submit the new product</string>
    <string name="txt_dia1">All done!</string>
    <string name="txt_dia2">Thanks for your\n cooperation using kieslog.\n Now your dentist can\n review your children\'s\n dietary habits. Together,\n you can make small\n adjustments to improve\n your kid\'s dental hygiene.</string>




    <string name="img_info">Info</string>
    <string name="img_back">Back</string>
    <string name="img_valid">Valid</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">Re-enter password</string>





    <string-array name="settings_array">
        <item>Change Password</item>
        <item>Terms Of Service And Privacy Policy</item>
        <item>About</item>
    </string-array>
    <string-array name="unit_array">
        <item>Grams</item>
        <item>Milliliters</item>
        <item>Piece</item>
        <item>Box</item>
        <item>Bottle</item>
    </string-array>
</resources>
