<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DADDDF">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0097A7">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_back_white_36dp"
            android:id="@+id/back"
            android:contentDescription="@string/img_back"/>

        <TextView
            android:id="@+id/new_product_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_new_product_tv"
            android:layout_toEndOf="@+id/back"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textSize="17sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/prod_detail_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/name_title"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_ed"
            android:inputType="text"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/name_hint"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>
        <TextView
            android:id="@+id/unit_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/unit_title"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:id="@+id/unit_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/unit_ed"
                android:inputType="text"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:hint="@string/unit_hint"
                android:textColorHint="@android:color/darker_gray"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="#0097A7"
            android:text="@string/button_save"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp" />
    </LinearLayout>

</RelativeLayout>