<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_add_product"
    android:background="#DADDDF"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trelokopoi.dentist.ProductToChildrenActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0097A7">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_arrow_back_white_36dp"
        android:id="@+id/back"
        android:contentDescription="@string/img_back"/>

    <TextView
        android:id="@+id/product_to_children_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_toEndOf="@+id/back"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/white"
        android:textSize="17sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/prod_detail_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <TextView
            android:id="@+id/quantity_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quantity_title"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:id="@+id/quantity_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_ed"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/quantity_tv"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/measurement_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/measurement_tv"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/quantity_ed" />
        </RelativeLayout>

        <TextView
            android:id="@+id/time_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/time_title"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/time_ed"
                android:inputType="time"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic_schedule_black_24dp"
                android:id="@+id/time_img"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/time_ed"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/time_tv"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"/>

        </RelativeLayout>

        <ListView android:id="@+id/childrenListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:background="@android:drawable/dialog_holo_light_frame"/>

        <Button
            android:id="@+id/save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:text="@string/button_save"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/blue" />
    </LinearLayout>

    </RelativeLayout>