<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:background="#4EA991"
    android:paddingLeft="25dp"
    android:clipToPadding="false">

    <LinearLayout
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"
        android:id="@+id/linearLayout"
        android:clipToPadding="false"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_left_white_36dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_back"
        android:id="@+id/txt_header"
        android:text="@string/txt_header"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="2sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_header"
        android:id="@+id/txt_text1"
        android:text="@string/txt_text1"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_text1"
        android:id="@+id/txt_email"
        android:text="@string/txt_email"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/txt_email"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:textCursorDrawable="@null"
        android:backgroundTint="#DADDDF"
        android:maxLines="1" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_white_24dp"
        android:id="@+id/img_checkEmail"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_email"
        android:visibility="invisible"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/edit_email"
        android:id="@+id/btn_done"
        android:textSize="16sp"
        android:textColor="#439EAA"
        android:background="@color/white"
        android:text="@string/btn_done"
        android:elevation="20dp"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"/>

</RelativeLayout>