<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0097A7"
        android:id="@+id/rl_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_back_white_36dp"
            android:id="@+id/change_pass_back"/>

        <TextView
            android:id="@+id/change_pass_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/settings_header"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/change_pass_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/rl_title"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        android:text="@string/settings_title_changePassword"/>

    <TextView
        android:id="@+id/oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pass_title"
        android:text="@string/old_password"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oldPassword"
        android:id="@+id/oldPasswordEditText"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textCursorDrawable="@null"
        android:maxLines="1"/>

    <ImageView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_gray_24dp"
        android:id="@+id/img_checkOldPass"
        android:layout_below="@id/oldPassword"
        android:visibility="invisible"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/oldPasswordEditText"
        android:text="@string/new_password"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPassword"
        android:id="@+id/newPasswordEditText"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLines="1" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_gray_24dp"
        android:id="@+id/img_checkNewPass"
        android:layout_below="@id/newPassword"
        android:visibility="invisible"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/newPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPasswordEditText"
        android:text="@string/new_password_again"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPasswordAgain"
        android:id="@+id/newPasswordAgainEditText"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLines="1" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_gray_24dp"
        android:id="@+id/img_checkNewPassAgain"
        android:layout_below="@id/newPasswordAgain"
        android:visibility="invisible"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/newPasswordAgainEditText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerInside"
        android:text="@string/button_save"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/shape3"/>

</RelativeLayout>